Fixed CSS issue where display of dropdown is visible from desktop

--- a/assets/css/theme-light.css
+++ b/assets/css/theme-light.css
@@ -307,8 +307,6 @@ canvas {
     font-weight: 600;
     text-align: left;
     cursor: pointer;
-
-    display: flex;
     justify-content: space-between;
     align-items: center;
 }
